# makeup-comparator

./: .gitignore  .rusty-hook.toml  Cargo.toml  DOCUMENTATION.md  README.md  test_coverage.sh
.github/workflows/: generate_tag.yml  rust.yml
scrapped-webs/: Cargo.toml
scrapped-webs/src/: lib.rs  main.rs  sephora.rs
scrapped_webs/: Cargo.toml  README.md
scrapped_webs/src/: common.rs  configuration.rs  helper.rs  lib.rs  main.rs  product.rs  scrappable.rs  sephora.rs
scrapped_webs/src/webs/: maquillalia.rs  mod.rs  sephora.rs
scrapped_webs/tests/: test_maquillalia.rs  test_product.rs  test_scrapped_webs.rs  test_sephora.rs
src/: main.rs  parameters.rs  parameters_processor.rs  scraper_handler.rs  terminal_visualizer.rs
