[package]
name = "makeup-comparator"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "scrapped_webs",
]

[[bin]]
name = "makeup-comparator"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.2.16", features = ["derive"] }
scrapped-webs = {path = "scrapped_webs"}

[dev-dependencies]
rusty-hook = "^0.11.2"
