[package]
name = "makeup-comparator"
version = "1.0.0"
edition = "2021"
authors = ["RubenRubioM"]
description = "CLI program look for cosmetic products within a various specialized websites and compare them"
readme = "README.md"
homepage = "https://github.com/RubenRubioM/makeup-comparator"
repository = "https://github.com/RubenRubioM/makeup-comparator"
keywords = ["cli", "search", "makeup"]
categories = ["command-line-utilities"]

[workspace]
members = [
    "scrapped_webs",
]

[[bin]]
name = "makeup-comparator"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "3.2.23", features = ["derive"] }
scrapped-webs = {path = "scrapped_webs", version = "*"}

[profile.release]
opt-level = 3

[dev-dependencies]
rusty-hook = "^0.11.2"
