[package]
name = "scrapped-webs"
version = "0.1.0"
edition = "2021"
description = "Auxiliary crate to encapsulate the scrapped webs functionalities"

[dependencies]
ansi_term = "0.12.1"
reqwest = {version = "0.11", features = ["blocking"]}
scraper = "0.13.0"
strsim = "0.10.0"
anyhow = "1.0"
thiserror = "1.0"